--- a/BeverlyToDoList/Base.lproj/Main.storyboard
+++ b/BeverlyToDoList/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,30 +16,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IFB-jm-cmq">
-                                <rect key="frame" x="20" y="129" width="280" height="359"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hardware" translatesAutoresizingMaskIntoConstraints="NO" id="bvH-UO-Yaq">
+                                <rect key="frame" x="190" y="178" width="220" height="244"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="244" id="QDi-tq-yjG"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="180" id="RLL-t1-Qlm"/>
+                                    <constraint firstAttribute="width" constant="220" id="ReT-ob-81W"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="220" id="TYX-Oe-zkq"/>
+                                    <constraint firstAttribute="width" constant="220" id="fcC-eb-UA8"/>
+                                    <constraint firstAttribute="height" constant="180" id="wrc-6G-chW"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="244" id="y9p-sa-IxJ"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="244" id="yJh-oC-VHg"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="RLL-t1-Qlm"/>
+                                        <exclude reference="ReT-ob-81W"/>
+                                        <exclude reference="TYX-Oe-zkq"/>
+                                        <exclude reference="wrc-6G-chW"/>
+                                        <exclude reference="y9p-sa-IxJ"/>
+                                        <exclude reference="yJh-oC-VHg"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgd-Xh-XZc">
+                                <rect key="frame" x="224" y="211" width="142" height="178"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="00:00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HcL-b0-zzO">
-                                        <rect key="frame" x="104" y="126" width="72" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="72" id="300-nA-eXx"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00:00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HcL-b0-zzO">
+                                        <rect key="frame" x="35" y="79" width="72" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7kQ-By-gsE">
-                                        <rect key="frame" x="8" y="321" width="33" height="30"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Start">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="start:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ndu-ZN-Z9h"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JnV-4f-w5G">
-                                        <rect key="frame" x="239" y="321" width="33" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JnV-4f-w5G">
+                                        <rect key="frame" x="101" y="125" width="33" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal" title="Stop">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -49,20 +58,45 @@
                                             <action selector="stop:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="wFZ-pi-3o4"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7kQ-By-gsE">
+                                        <rect key="frame" x="8" y="125" width="33" height="30"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Start">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="start:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ndu-ZN-Z9h"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.23999999999999999" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="7kQ-By-gsE" firstAttribute="bottom" secondItem="IFB-jm-cmq" secondAttribute="bottomMargin" id="LsD-Jy-ETC"/>
-                                    <constraint firstItem="7kQ-By-gsE" firstAttribute="leading" secondItem="IFB-jm-cmq" secondAttribute="leadingMargin" id="U1s-Vb-5Ua"/>
-                                    <constraint firstItem="7kQ-By-gsE" firstAttribute="baseline" secondItem="JnV-4f-w5G" secondAttribute="baseline" id="eR1-LW-Isr"/>
-                                    <constraint firstItem="JnV-4f-w5G" firstAttribute="trailing" secondItem="IFB-jm-cmq" secondAttribute="trailingMargin" id="l5m-KZ-DyX"/>
+                                    <constraint firstAttribute="centerY" secondItem="HcL-b0-zzO" secondAttribute="centerY" id="1AY-66-GWh"/>
+                                    <constraint firstItem="7kQ-By-gsE" firstAttribute="bottom" secondItem="JnV-4f-w5G" secondAttribute="bottom" id="BxV-JG-1hh"/>
+                                    <constraint firstAttribute="width" constant="142" id="CUL-xz-2UA"/>
+                                    <constraint firstAttribute="height" constant="178" id="Ja9-i1-DQ6"/>
+                                    <constraint firstAttribute="bottom" secondItem="7kQ-By-gsE" secondAttribute="bottom" constant="10" id="LpR-fs-bem"/>
+                                    <constraint firstAttribute="centerX" secondItem="HcL-b0-zzO" secondAttribute="centerX" id="Mre-TP-R0f"/>
+                                    <constraint firstAttribute="trailing" secondItem="JnV-4f-w5G" secondAttribute="trailing" constant="10" id="nFG-MZ-8az"/>
+                                    <constraint firstItem="7kQ-By-gsE" firstAttribute="leading" secondItem="Kgd-Xh-XZc" secondAttribute="leading" constant="8" id="q64-ik-eZr"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IFB-jm-cmq" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="4" id="tTT-71-ehC"/>
+                            <constraint firstAttribute="centerY" secondItem="Kgd-Xh-XZc" secondAttribute="centerY" id="9KM-zO-2Bk"/>
+                            <constraint firstAttribute="centerY" secondItem="bvH-UO-Yaq" secondAttribute="centerY" id="YYM-2O-S4h"/>
+                            <constraint firstAttribute="centerX" secondItem="Kgd-Xh-XZc" secondAttribute="centerX" constant="5" id="dMk-dd-qqy"/>
+                            <constraint firstAttribute="centerY" secondItem="bvH-UO-Yaq" secondAttribute="centerY" id="df2-nD-mKh"/>
+                            <constraint firstAttribute="centerX" secondItem="bvH-UO-Yaq" secondAttribute="centerX" id="mAa-u2-QBE"/>
+                            <constraint firstAttribute="centerX" secondItem="bvH-UO-Yaq" secondAttribute="centerX" id="sgJ-3s-9wl"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="YYM-2O-S4h"/>
+                                <exclude reference="mAa-u2-QBE"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="displayTimeLabel" destination="HcL-b0-zzO" id="Tdg-2j-Zet"/>
@@ -72,4 +106,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="hardware" width="220" height="244"/>
+    </resources>
 </document>
